@@ -33,6 +33,7 @@ import java.util.Map;
 import java.util.Set;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.MessageSource;
+import org.springframework.http.HttpEntity;
 import org.springframework.security.crypto.encrypt.TextEncryptor;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
 import org.springframework.web.client.RestOperations;
@@ -82,12 +83,8 @@ public class AlsoEnergyCloudIntegrationService extends BaseOAuth2ClientCloudInte
 	/** The service settings. */
 	public static final List<SettingSpecifier> SETTINGS;
 	static {
-		var settings = new ArrayList<SettingSpecifier>(1);
-		settings.add(OAUTH_CLIENT_ID_SETTING_SPECIFIER);
-		settings.add(USERNAME_SETTING_SPECIFIER);
-		settings.add(PASSWORD_SETTING_SPECIFIER);
-		settings.add(BASE_URL_SETTING_SPECIFIER);
-		SETTINGS = Collections.unmodifiableList(settings);
+		SETTINGS = List.of(OAUTH_CLIENT_ID_SETTING_SPECIFIER, USERNAME_SETTING_SPECIFIER,
+				PASSWORD_SETTING_SPECIFIER, BASE_URL_SETTING_SPECIFIER);
 	}
 
 	/** The service secure setting keys. */
@@ -161,7 +158,7 @@ public class AlsoEnergyCloudIntegrationService extends BaseOAuth2ClientCloudInte
 					(req) -> UriComponentsBuilder.fromUri(resolveBaseUrl(integration, BASE_URI))
 							.path(AlsoEnergyCloudIntegrationService.LIST_SITES_URL).buildAndExpand()
 							.toUri(),
-					res -> res.getBody());
+					HttpEntity::getBody);
 			log.debug("Validation of config {} succeeded: {}", integration.getConfigId(), response);
 			return Result.success();
 		} catch ( Exception e ) {
