@@ -1,21 +1,21 @@
 /* ==================================================================
  * LocalizedInvoiceMatchFilterResults.java - 29/05/2018 1:14:28 PM
- * 
+ *
  * Copyright 2018 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -32,46 +32,47 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
-import net.solarnetwork.central.domain.FilterResults;
-import net.solarnetwork.central.support.BasicFilterResults;
 import net.solarnetwork.central.user.billing.domain.InvoiceMatch;
 import net.solarnetwork.central.user.billing.domain.InvoiceMatchFilterResults;
 import net.solarnetwork.central.user.billing.domain.LocalizedInvoiceMatchFilterResultsInfo;
 import net.solarnetwork.central.user.billing.domain.LocalizedInvoiceMatchInfo;
+import net.solarnetwork.dao.BasicFilterResults;
+import net.solarnetwork.dao.FilterResults;
 
 /**
  * Localized version of {@link InvoiceMatchFilterResults}.
- * 
+ *
  * @author matt
- * @version 2.0
+ * @version 2.1
  */
 public class LocalizedInvoiceMatchFilterResults
 		implements InvoiceMatchFilterResults, LocalizedInvoiceMatchFilterResultsInfo {
 
-	private final FilterResults<InvoiceMatch> delegate;
+	private final FilterResults<InvoiceMatch, String> delegate;
 	private final Locale locale;
 	private final String currencyCode;
 
 	/**
 	 * Construct with locale.
-	 * 
+	 *
 	 * <p>
 	 * The currency code is taken from the first available invoice, or defaults
 	 * to {@literal NZD}.
 	 * </p>
-	 * 
+	 *
 	 * @param delegate
 	 *        the results
 	 * @param locale
 	 *        the desired locale
 	 */
-	public LocalizedInvoiceMatchFilterResults(FilterResults<InvoiceMatch> delegate, Locale locale) {
+	public LocalizedInvoiceMatchFilterResults(FilterResults<InvoiceMatch, String> delegate,
+			Locale locale) {
 		this(delegate, locale, currencyCodeFromInvoices(delegate));
 	}
 
 	/**
 	 * Constructor.
-	 * 
+	 *
 	 * @param delegate
 	 *        the results
 	 * @param locale
@@ -80,8 +81,8 @@ public class LocalizedInvoiceMatchFilterResults
 	 *        the currency code to use; will default to {@literal NZD} if
 	 *        {@literal null}
 	 */
-	public LocalizedInvoiceMatchFilterResults(FilterResults<InvoiceMatch> delegate, Locale locale,
-			String currencyCode) {
+	public LocalizedInvoiceMatchFilterResults(FilterResults<InvoiceMatch, String> delegate,
+			Locale locale, String currencyCode) {
 		super();
 		assert delegate != null;
 		this.delegate = localizedInvoices(delegate, locale);
@@ -95,7 +96,7 @@ public class LocalizedInvoiceMatchFilterResults
 		this.currencyCode = currencyCode;
 	}
 
-	private static String currencyCodeFromInvoices(FilterResults<InvoiceMatch> delegate) {
+	private static String currencyCodeFromInvoices(FilterResults<InvoiceMatch, String> delegate) {
 		// take currency code from first invoice
 		assert delegate != null;
 		Iterator<InvoiceMatch> itr = delegate.iterator();
@@ -105,8 +106,8 @@ public class LocalizedInvoiceMatchFilterResults
 		return null;
 	}
 
-	private static FilterResults<InvoiceMatch> localizedInvoices(FilterResults<InvoiceMatch> delegate,
-			Locale locale) {
+	private static FilterResults<InvoiceMatch, String> localizedInvoices(
+			FilterResults<InvoiceMatch, String> delegate, Locale locale) {
 		if ( delegate == null ) {
 			return null;
 		}
@@ -114,8 +115,8 @@ public class LocalizedInvoiceMatchFilterResults
 			if ( item instanceof LocalizedInvoiceMatchInfo ) {
 				return item;
 			}
-			return (InvoiceMatch) new LocalizedInvoiceMatch(item, locale);
-		}).collect(Collectors.toList());
+			return new LocalizedInvoiceMatch(item, locale);
+		}).toList();
 		return new BasicFilterResults<>(list, delegate.getTotalResults(), delegate.getStartingOffset(),
 				delegate.getReturnedResultCount());
 	}
@@ -141,7 +142,7 @@ public class LocalizedInvoiceMatchFilterResults
 	}
 
 	@Override
-	public Integer getStartingOffset() {
+	public long getStartingOffset() {
 		return delegate.getStartingOffset();
 	}
 
@@ -151,13 +152,13 @@ public class LocalizedInvoiceMatchFilterResults
 	}
 
 	@Override
-	public Integer getReturnedResultCount() {
+	public int getReturnedResultCount() {
 		return delegate.getReturnedResultCount();
 	}
 
 	/**
 	 * Sum a set of {@code BigDecimal} values.
-	 * 
+	 *
 	 * @param func
 	 *        the method to use that returns the value to sum, e.g.
 	 *        {@code InvoiceMatch::getAmount}
